# devhacks

./: README.rst  pyproject.toml  summary.csv  unprocessed_cbr.txt  unprocessed_epub.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
devhacks/: compare_media_flow.py  list_docker_ports.py  remove_every_other_file.py
scripts/: downscale_to_720p.sh  jf_delete_unmonitor.sh  summary_table.sh
tests/: test_devhacks.py  test_sethlans.py
