[tool.poetry]
name = "devhacks"
version = "0.1.0"
description = ""
authors = ["Marc Brooks <marcwbrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
